--- a/FitLogGo/src/FitLogGo/wwwroot/DistancePerDay.html
+++ b/FitLogGo/src/FitLogGo/wwwroot/DistancePerDay.html
@@ -18,7 +18,7 @@
                     success: function (chartsdata) {
                         var data = new google.visualization.DataTable();
                         data.addColumn('number', 'Workout Number');
-                        data.addColumn('number', 'Invidual Sessions');
+                        data.addColumn('number', 'Miles');
                         for (var i = 0; i < chartsdata.length; i++) {
                             data.addRow([chartsdata[i].WorkoutNumber, chartsdata[i].MileageName]);
                         }
@@ -26,9 +26,12 @@
                         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div'));
                         var options = {
                             title: 'Miles Report',
-                            legend: 'bottom',
+                            trendlines: {
+                                0: { type: 'linear', lineWidth: 5, opacity: .3 },
+                            },
+                            legend: 'top',
                             hAxis: {
-                                title: 'Cardio',
+                                title: 'Sessions',
                                 format: '#',
                             },
                             vAxis: {
@@ -37,7 +40,7 @@
                                 title: 'Distance in Miles'
                             },
                             chartArea: {
-                                left: 100, top: 50, width: '70%', height: '50%'
+                                left: 100, top: 50, width: '100%', height: '50%'
                             }
                            
                         };
@@ -64,7 +67,7 @@
                     success: function (chartsdata) {
                         var data = new google.visualization.DataTable();
                         data.addColumn('number', 'Workout Number');
-                        data.addColumn('number', 'Invidual Sessions');
+                        data.addColumn('number', 'Minutes');
                         for (var i = 0; i < chartsdata.length; i++) {
                             data.addRow([chartsdata[i].WorkoutNumber, chartsdata[i].MinutesName]);
                         }
@@ -72,9 +75,12 @@
                         var chart = new google.visualization.ColumnChart(document.getElementById('chart_div_two'));
                         var options = {
                             title: 'Minutes Report',
-                            legend: 'bottom',
+                            trendlines: {
+                                0: { type: 'linear', lineWidth: 5, opacity: .3 },
+                            },
+                            legend: 'top',
                             hAxis: {
-                                title: 'Cardio',
+                                title: 'Sessions',
                                 format: '#',
                             },
                             vAxis: {
@@ -83,7 +89,55 @@
                                 title: 'Total Minutes'
                             },
                             chartArea: {
-                                left: 100, top: 50, width: '70%', height: '50%'
+                                left: 100, top: 50, width: '100%', height: '50%'
+                            }
+
+                        };
+                        chart.draw(data, options);
+
+                                },
+                                error: function () {
+                                    alert("Error loading data! Please try again.");
+                                }
+                            });
+                        })
+
+        </script>
+        <!--Third Chart-->
+        <script type="text/javascript">
+
+            $(function () {
+                $.ajax({
+                    type: 'Get',
+                    dataType: 'json',
+                    contentType: 'application/json',
+                    url: 'http://localhost:61621/api/ChartsThree',
+                    data: '{}',
+                    success: function (chartsdata) {
+                        var data = new google.visualization.DataTable();
+                        data.addColumn('number', 'Workout Number');
+                        data.addColumn('number', 'Current Weight');
+                        for (var i = 0; i < chartsdata.length; i++) {
+                            data.addRow([chartsdata[i].WorkoutNumber, chartsdata[i].WeightName]);
+                        }
+                        // Instantiate and draw our chart, passing in some options
+                        var chart = new google.visualization.ColumnChart(document.getElementById('chart_div_three'));
+                        var options = {
+                            title: 'Weight Report',
+                            trendlines: {
+                                0: {type: 'linear', lineWidth: 5, opacity: .3},},
+                            legend: 'top',
+                            hAxis: {
+                                title: 'Sessions',
+                                format: '#',
+                            },
+                            vAxis: {
+                                minValue: 150,
+                                maxValue: 170,
+                                title: 'Current Weight'
+                            },
+                            chartArea: {
+                                left: 100, top: 50, width: '100%', height: '50%'
                             }
 
                         };
@@ -100,8 +154,9 @@
     </head>
 
 <body>
+    <!--<div id="chart_div" style="width: 900px; height:500px"></div>-->
     <div id="chart_div"></div>
     <div id="chart_div_two"></div>
-   
+    <div id="chart_div_three"></div>
 </body>
 </html>
